// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`onFinish: finish 1`] = `
"
   [Error]: ReflectedValue Cannot log ReflectedValue of id -1. Index out of bounds.
   [Stack]:     at start:assembly/jest-reporter~anonymous|0~anonymous|2 (wasm-function[61]:0x166c)
               at ../assembly/assembly/internal/call/__call (wasm-function[100]:0x2a42)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

    [File]: assembly/jest-reporter.ts RTrace: +11
  [Groups]: 2 pass, 2 total
  [Result]: ✖ FAIL
 [Summary]: 3 pass,  0 fail, 7 total
    [Time]: 0ms

"
`;

exports[`onGroupStart 1`] = `""`;

exports[`onGroupStart: examples 1`] = `
"[Describe]: examples

     [Log]: \\"testing in a group\\"
   [Stack]: at ../assembly/assembly/internal/Reflect/Reflect.attachStackTrace (wasm-function[40]:0x1164)
            at ../assembly/assembly/internal/log/log<~lib/string/String> (wasm-function[59]:0x1655)
            at start:assembly/jest-reporter~anonymous|0 (wasm-function[97]:0x2a14)
            at ../assembly/assembly/internal/call/__call (wasm-function[100]:0x2a42)
"
`;

exports[`onTestFinish: examples example 1 1`] = `
" [Success]: ✔ example 1
"
`;

exports[`onTestFinish: examples log value 1`] = `
" [Success]: ✔ log value
     [Log]: \\"testing in a test\\"
   [Stack]: at ../assembly/assembly/internal/Reflect/Reflect.attachStackTrace (wasm-function[40]:0x1164)
            at ../assembly/assembly/internal/log/log<~lib/string/String> (wasm-function[59]:0x1655)
            at start:assembly/jest-reporter~anonymous|0~anonymous|1 (wasm-function[60]:0x1665)
            at ../assembly/assembly/internal/call/__call (wasm-function[100]:0x2a42)
"
`;

exports[`onTestFinish: examples this should throw but it does not 1`] = `
"    [Fail]: ✖ this should throw but it does not
 [Message]: it should throw
"
`;

exports[`onTestFinish: examples when two things should equal each other 1`] = `
"  [Throws]: ✔ when two things should equal each other RTrace: +9
"
`;

exports[`onTestStart: examples example 1 1`] = `""`;

exports[`onTestStart: examples log value 1`] = `""`;

exports[`onTestStart: examples this should throw but it does not 1`] = `""`;

exports[`onTestStart: examples when two things should equal each other 1`] = `""`;

exports[`todo: examples 1`] = `
"    [Todo]: example todo
"
`;
